--- a/aivika-experiment-provider-distributed.cabal
+++ b/aivika-experiment-provider-distributed.cabal
@@ -1,10 +1,12 @@
-name:            aivikasim-experiment-provider-distributed
-version:         0.1
+name:            aivika-experiment-provider-distributed
+version:         0.2
 synopsis:        Simulation experiment data provider for distributed simulation
 description:
-    It allows providing with the results of distributed simulation experiments [1].
+    It allows providing with the results of distributed simulation experiments [1, 2].
     .
-    \[1] <http://www.aivikasoft.com/aivikasim/aivikasim-experiment>
+    \[1] <http://hackage.haskell.org/package/aivika-experiment>
+    .
+    \[2] <http://hackage.haskell.org/package/aivika-distributed>
     .
 category:        Simulation
 license:         AllRightsReserved
@@ -12,7 +14,7 @@ license-file:    LICENSE
 copyright:       (c) 2017. David Sorokin <david.sorokin@gmail.com>
 author:          David Sorokin
 maintainer:      David Sorokin <david.sorokin@gmail.com>
-homepage:        http://www.aivikasoft.com/en/products/aivikasim.html
+homepage:        http://www.aivikasoft.com
 cabal-version:   >= 1.6
 build-type:      Simple
 tested-with:     GHC == 8.0.2
@@ -33,11 +35,11 @@ library
                      time >= 1.5.0.1,
                      exceptions >= 0.8.0.2,
                      distributed-process >= 0.6.1,
-                     aivikasim >= 1.0,
-                     aivikasim-transformers >= 1.0,
-                     aivikasim-experiment >= 0.1,
-                     aivikasim-experiment-provider >= 0.1,
-                     aivikasim-distributed >= 0.1
+                     aivika >= 5.1,
+                     aivika-transformers >= 5.1,
+                     aivika-experiment >= 5.0,
+                     aivika-experiment-provider >= 0.2,
+                     aivika-distributed >= 0.5
 
     extensions:      MultiParamTypeClasses,
                      TypeFamilies
@@ -47,4 +49,4 @@ library
 source-repository head
 
     type:     git
-    location: https://github.com/dsorokin/aivikasim-experiment-provider-distributed
+    location: https://github.com/dsorokin/aivika-experiment-provider-distributed
